<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_textotoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:paddingVertical="8dp"
        android:text="@string/pergunta"
        android:textColor="@color/color_text_um"
        android:textSize="@dimen/tamanho_fonte"
        app:layout_constraintRight_toRightOf="@id/tb_toolbar"
        app:layout_constraintTop_toTopOf="@id/tb_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_apresetacao"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:gravity="center"
        android:text="@string/melhor_opcao"
        android:textColor="@color/color_fonte2"
        android:textSize="@dimen/tamanho_fonte"
        app:layout_constraintTop_toBottomOf="@id/iv_image" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tv_alcool"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:hint="@string/hint_precoalcool"
        app:layout_constraintLeft_toLeftOf="@id/tv_apresetacao"
        app:layout_constraintRight_toRightOf="@id/tv_apresetacao"
        app:layout_constraintTop_toBottomOf="@id/tv_apresetacao" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tv_gasolina"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_option"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:hint="@string/preco_gasolina"
        app:layout_constraintLeft_toLeftOf="@id/tv_alcool"
        app:layout_constraintRight_toRightOf="@id/tv_alcool"
        app:layout_constraintTop_toBottomOf="@id/tv_alcool" />

    <Button
        android:id="@+id/bt_botao"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:text="@string/text_botao"
        android:textSize="@dimen/tamanho_fonte_botao"
        app:layout_constraintLeft_toLeftOf="@id/tv_gasolina"
        app:layout_constraintRight_toRightOf="@id/tv_gasolina"
        app:layout_constraintTop_toBottomOf="@id/tv_gasolina"
        android:onClick="clique"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_opcaoescolhida"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginRight="@dimen/margin_right"
        android:gravity="center"
        android:text="@string/opcao_escolhida"
        android:textColor="@color/color_fonte2"
        android:textSize="@dimen/tamanho_fonte"
        app:layout_constraintLeft_toLeftOf="@id/bt_botao"
        app:layout_constraintRight_toRightOf="@id/bt_botao"
        app:layout_constraintTop_toBottomOf="@id/bt_botao" />
</androidx.constraintlayout.widget.ConstraintLayout>